Editar já tem os 5 contactos
O Editar já funciona direito, já aparece a informção nos campos e já tem
os 5 contactos, paises e tipos

--- a/GestaoContactos/public_html/Editar.html
+++ b/GestaoContactos/public_html/Editar.html
@@ -34,30 +34,134 @@ and open the template in the editor.
 
             <p>Telefone: </p>
             <div>
-                <p>
+            <p>
             <label for="Pais">Pais: </label>
-                <select id="Pais" name="Pais" >
-                    <option id="Portugal" value="+351">Portugal (+351)</option>
-                    <option id="Espanha" value="+34">Espanha (+34)</option>
-                    <option id="Brazil" value="+55">Brasil (+55)</option>
-                    <option id="frança" value="+33">França (+33)</option>
-                    <option id="Suica" value="+41">Suiça (+41)</option>
-                    <option id="Alemanha" value="+49">Alemanha (+49)</option>
-                    <option id="Inglaterra" value="+44">Inglaterra (+44)</option>
-                    <option id="EstadosUnidos" value="+1">Estados Unidos (+1)</option>
-                    <option id="Holanda" value="+31">Holanda (+31)</option>
-                    <option id="Angola" value="+244">Angola (+244)</option>
+                <select id="Pais1" name="Pais1">
+                    <option id="Portugal1" value="Portugal">Portugal (+351)</option>
+                    <option id="Espanha1" value="Espanha">Espanha (+34)</option>
+                    <option id="Brasil1" value="Brasil">Brasil (+55)</option>
+                    <option id="França1" value="França">França (+33)</option>
+                    <option id="Suiça1" value="Suiça">Suiça (+41)</option>
+                    <option id="Alemanha1" value="Alemanha">Alemanha (+49)</option>
+                    <option id="Inglaterra1" value="Inglaterra">Inglaterra (+44)</option>
+                    <option id="EstadosUnidos1" value="EstadosUnidos">Estados Unidos (+1)</option>
+                    <option id="Holanda1" value="Holanda">Holanda (+31)</option>
+                    <option id="Angola1" value="Angola">Angola (+244)</option>
                 </select>
             </p>
             <p>
-                <label for="Numero">Número: </label><input id="Numero" type="tel" name="Numero" placeholder="9XX XXX XXX"><span id = "inputNumeroInvalido" class="inputMessageErrorHidden"> Número Vazio!</span>
+                <label for="Numero">Número 1: </label><input id="Numero1" type="tel" name="Numero1" placeholder="XXX XXX XXX"><span id = "inputNumeroInvalido" class="inputMessageErrorHidden"> Número Vazio!</span>
             </p>
             <p>
                 <label for="Tipo">Tipo: </label>
-                    <select id="Tipo" name="Tipo" >
-                       <option value="Pessoal">Pessoal</option>
-                       <option value="Trabalho">Trabalho</option>
-                       <option value="Outro">Outro</option>
+                    <select id="Tipo1" name="Tipo1" >
+                       <option id="P1" value="P">Personal</option>
+                       <option id="W1" value="W">Work</option>
+                       <option id="O1" value="O">Other</option>
+                    </select>
+            </p>
+            <p>
+            <label for="Pais">Pais: </label>
+                <select id="Pais2" name="Pais2">
+                    <option id="Portugal2" value="Portugal">Portugal (+351)</option>
+                    <option id="Espanha2" value="Espanha">Espanha (+34)</option>
+                    <option id="Brasil2" value="Brasil">Brasil (+55)</option>
+                    <option id="França2" value="França">França (+33)</option>
+                    <option id="Suiça2" value="Suiça">Suiça (+41)</option>
+                    <option id="Alemanha2" value="Alemanha">Alemanha (+49)</option>
+                    <option id="Inglaterra2" value="Inglaterra">Inglaterra (+44)</option>
+                    <option id="EstadosUnidos2" value="EstadosUnidos">Estados Unidos (+1)</option>
+                    <option id="Holanda2" value="Holanda">Holanda (+31)</option>
+                    <option id="Angola2" value="Angola">Angola (+244)</option>
+                </select>
+            </p>
+            <p>
+                <label for="Numero">Número 2: </label><input id="Numero2" type="tel" name="Numero2" placeholder="XXX XXX XXX">
+            </p>
+            <p>
+                <label for="Tipo">Tipo: </label>
+                    <select id="Tipo2" name="Tipo2" >
+                       <option id="P2" value="P">Personal</option>
+                       <option id="W2" value="W">Work</option>
+                       <option id="O2" value="O">Other</option>
+                    </select>
+            </p>
+            <p>
+            <label for="Pais">Pais: </label>
+                <select id="Pais3" name="Pais3">
+                    <option id="Portugal3" value="Portugal">Portugal (+351)</option>
+                    <option id="Espanha3" value="Espanha">Espanha (+34)</option>
+                    <option id="Brasil3" value="Brasil">Brasil (+55)</option>
+                    <option id="França3" value="França">França (+33)</option>
+                    <option id="Suiça3" value="Suiça">Suiça (+41)</option>
+                    <option id="Alemanha3" value="Alemanha">Alemanha (+49)</option>
+                    <option id="Inglaterra3" value="Inglaterra">Inglaterra (+44)</option>
+                    <option id="EstadosUnidos3" value="EstadosUnidos">Estados Unidos (+1)</option>
+                    <option id="Holanda3" value="Holanda">Holanda (+31)</option>
+                    <option id="Angola3" value="Angola">Angola (+244)</option>
+                </select>
+            </p>
+            <p>
+                <label for="Numero">Número 3: </label><input id="Numero3" type="tel" name="Numero3" placeholder="XXX XXX XXX">
+            </p>
+            <p>
+                <label for="Tipo">Tipo: </label>
+                    <select id="Tipo3" name="Tipo3" >
+                       <option id="P3" value="P">Personal</option>
+                       <option id="W3" value="W">Work</option>
+                       <option id="O3" value="O">Other</option>
+                    </select>
+            </p>
+            <p>
+            <label for="Pais">Pais: </label>
+                <select id="Pais4" name="Pais4">
+                    <option id="Portugal4" value="Portugal">Portugal (+351)</option>
+                    <option id="Espanha4" value="Espanha">Espanha (+34)</option>
+                    <option id="Brasil4" value="Brasil">Brasil (+55)</option>
+                    <option id="França4" value="França">França (+33)</option>
+                    <option id="Suiça4" value="Suiça">Suiça (+41)</option>
+                    <option id="Alemanha4" value="Alemanha">Alemanha (+49)</option>
+                    <option id="Inglaterra4" value="Inglaterra">Inglaterra (+44)</option>
+                    <option id="EstadosUnidos4" value="EstadosUnidos">Estados Unidos (+1)</option>
+                    <option id="Holanda4" value="Holanda">Holanda (+31)</option>
+                    <option id="Angola4" value="Angola">Angola (+244)</option>
+                </select>
+            </p>
+            <p>
+                <label for="Numero">Número 4: </label><input id="Numero4" type="tel" name="Numero4" placeholder="XXX XXX XXX">
+            </p>
+            <p>
+                <label for="Tipo">Tipo: </label>
+                    <select id="Tipo4" name="Tipo4" >
+                       <option id="P4" value="P">Personal</option>
+                       <option id="W4" value="W">Work</option>
+                       <option id="O4" value="O">Other</option>
+                    </select>
+            </p>
+            <p>
+            <label for="Pais">Pais: </label>
+                <select id="Pais5" name="Pais5">
+                    <option id="Portugal5" value="Portugal">Portugal (+351)</option>
+                    <option id="Espanha5" value="Espanha">Espanha (+34)</option>
+                    <option id="Brasil5" value="Brasil">Brasil (+55)</option>
+                    <option id="França5" value="França">França (+33)</option>
+                    <option id="Suiça5" value="Suiça">Suiça (+41)</option>
+                    <option id="Alemanha5" value="Alemanha">Alemanha (+49)</option>
+                    <option id="Inglaterra5" value="Inglaterra">Inglaterra (+44)</option>
+                    <option id="EstadosUnidos5" value="EstadosUnidos">Estados Unidos (+1)</option>
+                    <option id="Holanda5" value="Holanda">Holanda (+31)</option>
+                    <option id="Angola5" value="Angola">Angola (+244)</option>
+                </select>
+            </p>
+            <p>
+                <label for="Numero">Número 5: </label><input id="Numero5" type="tel" name="Numero5" placeholder="XXX XXX XXX">
+            </p>
+            <p>
+                <label for="Tipo">Tipo: </label>
+                    <select id="Tipo5" name="Tipo5" >
+                       <option id="P5" value="P">Personal</option>
+                       <option id="W5" value="W">Work</option>
+                       <option id="O5" value="O">Other</option>
                     </select>
             </p>
             </div>
@@ -96,7 +200,7 @@ and open the template in the editor.
                     <input id="Fav" type="checkbox" name="Favorito" value="Fav" >Adicionar aos Favoritos
                 </label>
             </form>
-            <input id="Editar" type="image" src="Images/edit.png" width="68" height="48"></input>
+            <input id="Editar" type="image" src="Images/edit.png" width="68" height="48">
 
             <div id="Contacto">
                 <article></article>
