Teste aparecer a listagem no Pesquisa por filtragem
Ainda não está acabado, precisa de ser alterado

--- a/GestaoContactos/public_html/Adicionar.html
+++ b/GestaoContactos/public_html/Adicionar.html
@@ -171,7 +171,7 @@ and open the template in the editor.
             <p>Redes Sociais: </p>
             <div>
                 <p>
-                    <label for="Facebook">Facebook: </label><input id="Facebook" type="text" value="F" name="Facebook" placeholder="facebook.com/exemplo">
+                    <label for="Facebook">Facebook: </label><input id="Facebook" type="text" name="Facebook" placeholder="facebook.com/exemplo">
                 </p>
                 <p>
                     <label for="Google">Google+: </label><input id="Google" type="text" name="Google" placeholder="plus.google.com/XXXXX">
