Alteraçoes no pesquisar
Alterçoes de botoen e limpeza do codigo

--- a/GestaoContactos/public_html/Pesquisa.html
+++ b/GestaoContactos/public_html/Pesquisa.html
@@ -28,12 +28,11 @@ and open the template in the editor.
             <div id="Pesquisar">
                 <article>
                     <p>
-                        <label for="pesquisa">Pesquisa: </label><input id="pesquisa" type="text" name="pesquisa" required="required">
+                        <label for="pesquisa">Pesquisa: </label><input id="pesquisa" type="text" name="pesquisa" required="required"><button id="Enviar">Enviar</button>
                     </p>
                 </article>
             </div>
             <div id="Apresentar"><article id="contacto"></article></div>
-            <button id="Enviar">Enviar</button>
 
             <div id="Erro"></div>
         </div>
