--- a/GestaoContactos/public_html/Pesquisa.html
+++ b/GestaoContactos/public_html/Pesquisa.html
@@ -28,7 +28,7 @@ and open the template in the editor.
             <div id="Pesquisar">
                 <article>
                     <p>
-                        <label for="pesquisa">Pesquisa: </label><input id="pesquisa" type="text" name="pesquisa" required="required"><button id="Enviar">Enviar</button>
+                        <label for="pesquisa">Pesquisa: </label><input id="pesquisa" type="text" name="pesquisa" required="required"><input id="Enviar" type="image" src="Images/pesquisar.png" >
                     </p>
                 </article>
             </div>
