--- a/GestaoContactos/public_html/Adicionar.html
+++ b/GestaoContactos/public_html/Adicionar.html
@@ -35,7 +35,7 @@ and open the template in the editor.
             </p>
 
             <p>Telefone: </p>
-            <div>
+            <div id="tel">
             <p>
             <label for="Pais">Pais: </label>
                 <select id="Pais1" name="Pais1">
@@ -169,7 +169,7 @@ and open the template in the editor.
             </div>
             <form>Birthday: <input id="DOB" type="date" name="bday" ></form>
             <p>Redes Sociais: </p>
-            <div>
+            <div id="rede">
                 <p>
                     <label for="Facebook">Facebook: </label><input id="Facebook" type="text" name="Facebook" placeholder="facebook.com/exemplo">
                 </p>
