--- a/GestaoContactos/public_html/Adicionar.html
+++ b/GestaoContactos/public_html/Adicionar.html
@@ -199,10 +199,10 @@ and open the template in the editor.
             <form>
             <label>
                     <img src="Images/estrelaOff.png" id="estrela" alt="NO"/>
-                    <input id="Fav" type="checkbox" name="Favorito" value="Fav" >Adicionar aos Favoritos
+                    <input id="Fav" type="checkbox" name="Favorito" value="Fav" >
             </label>  
             </form>
-            <button id="Enviar">Enviar</button>
+            <input id="Enviar" type="image" name="Enviar">
         </div>
         
         <label for="cor">Cor: </label>
