--- a/GestaoContactos/public_html/index.html
+++ b/GestaoContactos/public_html/index.html
@@ -14,6 +14,10 @@ and open the template in the editor.
     </head>
     <body>
         <h1>A minha Agenda</h1>
+        <video width="768" height="432" autoplay>
+            <source src="Video/videos-spark.mp4" type="video/mp4">
+            Your browser does not support the <code>video</code> tag.
+        </video>
         <nav id="menu">
             <ul>
                 <li><a href="Adicionar.html">Adicionar Contacto</a></li>
