--- a/GestaoContactos/public_html/Editar.html
+++ b/GestaoContactos/public_html/Editar.html
@@ -197,7 +197,7 @@ and open the template in the editor.
             <form>
                 <label>
                     <img src="Images/estrelaOff.png" id="estrela" alt="NO"/>
-                    <input id="Fav" type="checkbox" name="Favorito" value="Fav" >Adicionar aos Favoritos
+                    <input id="Fav" type="checkbox" name="Favorito" value="Fav" >
                 </label>
             </form>
             <input id="Editar" type="image" src="Images/edit.png" width="68" height="48">
