Pesquisar.js a funcionar
Pesquisar a funcionar e alteraçoes de layout

--- a/GestaoContactos/public_html/About.html
+++ b/GestaoContactos/public_html/About.html
@@ -20,11 +20,14 @@ and open the template in the editor.
                 <li><a href="ListarTodosContactos.html">Listar Contactos</a></li>
                 <li><a href="ListarFavoritos.html">Favoritos</a></li>
                 <li><a href="Pesquisa.html">Pesquisa</a></li>
+                <li><p><a href="index.html">Voltar</a></p></li>
             </ul>
         </nav>
-        <div id="Erro"></div>
         <img src="Images/logotipoescola.png" alt=""/>
-        <footer>Trabalho realizado por: <p>César Meireles - 8150399</p><p> Luís Teixeira - 8140072</p><p> Tânia Assis - 8150455</p>
+        <div id="text">Trabalho realizado por: <p>César Meireles - 8150399</p><p> Luís Teixeira - 8140072</p><p> Tânia Assis - 8150455</p><p>LSIRC   2017</p></div>
+        <div id="Erro"></div>
+        
+        <footer>
             <label for="cor">Cor: </label>
             <select name="cor" id="cor">
                 <option id ="cornsilk" value="cornsilk">Quase Branco</option>
