--- a/GestaoContactos/public_html/index.html
+++ b/GestaoContactos/public_html/index.html
@@ -14,7 +14,7 @@ and open the template in the editor.
     </head>
     <body>
         <h1>A minha Agenda</h1>
-        <video width="768" height="432" autoplay>
+        <video width="768" height="432" autoplay loop>
             <source src="Video/videos-spark.mp4" type="video/mp4">
             Your browser does not support the <code>video</code> tag.
         </video>
@@ -24,11 +24,11 @@ and open the template in the editor.
                 <li><a href="ListarTodosContactos.html">Listar Contactos</a></li>
                 <li><a href="ListarFavoritos.html">Favoritos</a></li>
                 <li><a href="Pesquisa.html">Pesquisa</a></li>
+                <li><a href="About.html">About</a></li>
             </ul>
         </nav>
         <div id="Erro"></div>
-        <img src="Images/logotipoescola.png" alt=""/>
-        <footer>Trabalho realizado por: <p>César Meireles - 8150399</p><p> Luís Teixeira - 8140072</p><p> Tânia Assis - 8150455</p>
+        <footer>
             <label for="cor">Cor: </label>
             <select name="cor" id="cor">
                 <option id ="cornsilk" value="cornsilk">Quase Branco</option>
